Move menu to footer activity. Update class move from inner class. Add update button to about activity. Add update menu item to menu.

--- a/LaserSouthCoastGrandPrix/res/menu/menu.xml
+++ b/LaserSouthCoastGrandPrix/res/menu/menu.xml
@@ -27,6 +27,10 @@
         android:icon="@drawable/facebook">
     </item>
     <item
+        android:id="@+id/menu_update"
+        android:title="Update">
+    </item>
+    <item
         android:id="@+id/menu_about"
         android:title="About"
         android:icon="@drawable/question">
