--- a/LaserSouthCoastGrandPrix/res/layout/activity_about.xml
+++ b/LaserSouthCoastGrandPrix/res/layout/activity_about.xml
@@ -4,9 +4,10 @@
     android:layout_height="wrap_content" >
         
         <LinearLayout
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:orientation="vertical" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="update"
+            android:orientation="vertical" >
 
 		    <TextView
 		        android:id="@+id/textView1"
@@ -50,6 +51,17 @@
 		        android:textAppearance="?android:attr/textAppearanceSmall"
 		        android:textSize="@dimen/textSize" />
 
+		    <Button
+		        android:id="@+id/btnUpdate"
+		        style="android:buttonStyle"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_gravity="center_horizontal"
+		        android:onClick="update"
+		        android:text="Check for updates"
+		        android:textAppearance="?android:attr/textAppearanceSmall"
+		        android:textSize="@dimen/textSize" />
+
 		    <LinearLayout
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
@@ -78,7 +90,7 @@
 		            android:textSize="@dimen/smallSize" />     
 		            
 		        <TextView
-		            android:id="@+id/textView5"
+		            android:id="@+id/txtVersion"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:text="@string/version"
